<resources>
    <string name="app_name">IHabit</string>
    <string name="welcome">Welcome to IHabit</string>
    <string name="app_desc">
        "You have taken the first step toward managing your habits more effectively!"
    </string>
    <string name="slidehead1">Click Add to add new habits to your collection</string>
    <string name="slidehead2">Click Record to report a habit successful for the day</string>
    <string name="slidehead3">Click Manage to delete habits</string>
    <string name="slidehead4">Click Summary to view your weekly/monthly progress!</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start Tracking</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="developername">Developer Name: </string>
    <string name="developer_name">Sabrina Tessier</string>
    <string name="developeremail">Developer Email: </string>
    <string name="developer_email">s_tessier2@fanshaweonline.ca</string>
    <string name="my_preference">com.example.stessier.MyPref</string>
    <string name="my_preference_key">com.example.stessier.MyPrefKey</string>
    <string name="add_habit">Add a New Habit</string>
    <string name="record_habit">Record Habit</string>
    <string name="summary">Summary</string>
    <string name="manage_habits">Manage Habits</string>
    <string name="start_habit">Click Add New Habit to Get Started!</string>
    <string name="welcome_message">Choose an Activity</string>
    <string name="name">Name:  </string>
    <string name="choose_colour">Choose Colour for Habit</string>
    <string name="add_another">Add Another Habit</string>
    <string name="return_home">Home</string>
    <string name="record_instructions">Click a habit to mark it successful. Click it again to undo</string>
    <string name="manage_instructions">Click a habit to delete it</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="tab_text_1">By Day</string>
    <string name="tab_text_2">By Habit</string>
    <string name="summary1">Monthly Summary</string>
    <string name="summary2">Weekly Summary</string>
    <string name="choose_date">Choose Date</string>
    <string name="congratulations">Congratulations!</string>
    <string name="completed_date">On  %1$s  you completed the following habits: </string>
    <string name="no_habits_recorded">No habits recorded on %1$s</string>
    <string name="remove_all">Delete all Habits</string>
    <string name="thank_you">Thank you for using IHabit!</string>
    <string name="back_to_summary">Back to Summary</string>
    <string name="click_habit">Choose Habit to View Summary</string>
    <string name="you_completed_habit">You completed %1$s on the following dates: </string>
    <string name="not_recorded">%1$s has not yet been recorded</string>
    <string name="current_streak">Current Streak</string>
    <string name="longest_streak">Longest Streak</string>
    <string name="enable_notify">Notifications Enabled</string>
    <string-array
        name="numbers">
        <item>None</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
    </string-array>
    <string name="how_many_habits">How many healthy habits would you like to complete per day?</string>
</resources>
