<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hubBackground"
    android:orientation="vertical"
    tools:context=".RecordHabitActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/standard_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_teal"
        android:minHeight="?attr/actionBarSize" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/record_habit"
        android:textAlignment="center"
        android:textColor="@color/active_dots"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/record_instructions"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/habitsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="10dp"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right">

    </android.support.v7.widget.RecyclerView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_date"
            android:onClick="onClickBtnHome"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/return_home"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>